--- a/Index.html
+++ b/Index.html
@@ -57,6 +57,7 @@
         import { EffectComposer } from 'three/addons/postprocessing/EffectComposer.js';
         import { RenderPass } from 'three/addons/postprocessing/RenderPass.js';
         import { UnrealBloomPass } from 'three/addons/postprocessing/UnrealBloomPass.js';
+        import { SSAOPass } from 'three/addons/postprocessing/SSAOPass.js';
 
         const container = document.getElementById('three-container');
         const loadingDiv = document.getElementById('loading');
@@ -94,6 +95,21 @@
         };
         const bloomPass = new UnrealBloomPass(new THREE.Vector2(container.clientWidth, container.clientHeight), bloomParams.strength, bloomParams.radius, bloomParams.threshold);
         composer.addPass(bloomPass);
+
+        const ssaoParams = {
+            enabled: false,
+            kernelRadius: 16,
+            minDistance: 0.005,
+            maxDistance: 0.1,
+            intensity: 10 // Default intensity
+        };
+        const ssaoPass = new SSAOPass(scene, camera, container.clientWidth, container.clientHeight);
+        ssaoPass.kernelRadius = ssaoParams.kernelRadius;
+        ssaoPass.minDistance = ssaoParams.minDistance;
+        ssaoPass.maxDistance = ssaoParams.maxDistance;
+        ssaoPass.intensity = ssaoParams.intensity;
+        ssaoPass.enabled = ssaoParams.enabled;
+        composer.addPass(ssaoPass);
 
         const controls = new OrbitControls(camera, renderer.domElement);
         controls.enableDamping = true;
@@ -257,6 +273,13 @@
         bloomFolder.add(bloomParams, 'radius', 0, 1, 0.01).onChange(v => bloomPass.radius = v);
         bloomFolder.add(bloomParams, 'threshold', 0, 1, 0.01).onChange(v => bloomPass.threshold = v);
 
+        const ssaoFolder = postFolder.addFolder('SSAO');
+        ssaoFolder.add(ssaoParams, 'enabled').onChange(v => ssaoPass.enabled = v);
+        ssaoFolder.add(ssaoParams, 'kernelRadius', 0, 32, 0.1).onChange(v => ssaoPass.kernelRadius = v);
+        ssaoFolder.add(ssaoParams, 'minDistance', 0, 0.1, 0.001).onChange(v => ssaoPass.minDistance = v);
+        ssaoFolder.add(ssaoParams, 'maxDistance', 0, 0.2, 0.001).onChange(v => ssaoPass.maxDistance = v);
+        ssaoFolder.add(ssaoParams, 'intensity', 0, 100, 1).onChange(v => ssaoPass.intensity = v);
+
         // Shadow catcher GUI
         const shadowCatcherParams = {
             offset: 0.017
@@ -415,7 +438,8 @@
                     } : {})
                 })),
                 postProcessing: {
-                    bloom: bloomParams
+                    bloom: bloomParams,
+                    ssao: ssaoParams
                 },
                 shadowCatcher: shadowCatcherParams
             };
