--- a/Index.html
+++ b/Index.html
@@ -57,7 +57,6 @@
         import { EffectComposer } from 'three/addons/postprocessing/EffectComposer.js';
         import { RenderPass } from 'three/addons/postprocessing/RenderPass.js';
         import { UnrealBloomPass } from 'three/addons/postprocessing/UnrealBloomPass.js';
-        import { SSAOPass } from 'three/addons/postprocessing/SSAOPass.js';
 
         const container = document.getElementById('three-container');
         const loadingDiv = document.getElementById('loading');
@@ -69,22 +68,19 @@
 
         const scene = new THREE.Scene();
         const camera = new THREE.PerspectiveCamera(45, container.clientWidth / container.clientHeight, 0.1, 1000);
-        camera.position.set(-0.3674531894270703, 1.4382243402279844, 10.273768849592376);
-        camera.rotation.set(0.0010183180716188886, -0.02968115576813937, 0.000030220430066920483);
+        camera.position.set(-0.2840329107436267, 1.4382243402279846, 10.275912849022538);
+        camera.rotation.set(0.00101810946737628, -0.021709860116203898, 0.00002210128553521455);
 
-        const renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true });
+        const renderer = new THREE.WebGLRenderer({ antialias: true });
         renderer.setSize(container.clientWidth, container.clientHeight);
         renderer.setPixelRatio(window.devicePixelRatio);
         renderer.shadowMap.enabled = true;
         renderer.shadowMap.type = THREE.PCFSoftShadowMap;
-        renderer.setClearColor(0x000000, 0);
-        renderer.toneMapping = THREE.ReinhardToneMapping;
-        renderer.toneMappingExposure = 1;
+        renderer.setClearColor('#f0f0f0', 1);
         container.appendChild(renderer.domElement);
 
         const composer = new EffectComposer(renderer);
         const renderPass = new RenderPass(scene, camera);
-        renderPass.clear = false;
         composer.addPass(renderPass);
 
         const bloomParams = {
@@ -95,21 +91,6 @@
         };
         const bloomPass = new UnrealBloomPass(new THREE.Vector2(container.clientWidth, container.clientHeight), bloomParams.strength, bloomParams.radius, bloomParams.threshold);
         composer.addPass(bloomPass);
-
-        const ssaoParams = {
-            enabled: false,
-            kernelRadius: 16,
-            minDistance: 0.005,
-            maxDistance: 0.1,
-            intensity: 10 // Default intensity
-        };
-        const ssaoPass = new SSAOPass(scene, camera, container.clientWidth, container.clientHeight);
-        ssaoPass.kernelRadius = ssaoParams.kernelRadius;
-        ssaoPass.minDistance = ssaoParams.minDistance;
-        ssaoPass.maxDistance = ssaoParams.maxDistance;
-        ssaoPass.intensity = ssaoParams.intensity;
-        ssaoPass.enabled = ssaoParams.enabled;
-        composer.addPass(ssaoPass);
 
         const controls = new OrbitControls(camera, renderer.domElement);
         controls.enableDamping = true;
@@ -140,8 +121,8 @@
                 light.target = new THREE.Object3D();
                 light.castShadow = params.castShadow;
                 if (params.castShadow) {
-                    light.shadow.mapSize.width = 4096;
-                    light.shadow.mapSize.height = 4096;
+                    light.shadow.mapSize.width = 2048;
+                    light.shadow.mapSize.height = 2048;
                     light.shadow.camera.near = 0.1;
                     light.shadow.camera.far = 100;
                     light.shadow.camera.left = -20;
@@ -154,8 +135,8 @@
                 light = new THREE.PointLight(color, intensity, params.distance, params.decay);
                 light.castShadow = params.castShadow;
                 if (params.castShadow) {
-                    light.shadow.mapSize.width = 4096;
-                    light.shadow.mapSize.height = 4096;
+                    light.shadow.mapSize.width = 2048;
+                    light.shadow.mapSize.height = 2048;
                     light.shadow.camera.near = 0.1;
                     light.shadow.camera.far = 100;
                     light.shadow.bias = -0.0001;
@@ -273,24 +254,6 @@
         bloomFolder.add(bloomParams, 'radius', 0, 1, 0.01).onChange(v => bloomPass.radius = v);
         bloomFolder.add(bloomParams, 'threshold', 0, 1, 0.01).onChange(v => bloomPass.threshold = v);
 
-        const ssaoFolder = postFolder.addFolder('SSAO');
-        ssaoFolder.add(ssaoParams, 'enabled').onChange(v => ssaoPass.enabled = v);
-        ssaoFolder.add(ssaoParams, 'kernelRadius', 0, 32, 0.1).onChange(v => ssaoPass.kernelRadius = v);
-        ssaoFolder.add(ssaoParams, 'minDistance', 0, 0.1, 0.001).onChange(v => ssaoPass.minDistance = v);
-        ssaoFolder.add(ssaoParams, 'maxDistance', 0, 0.2, 0.001).onChange(v => ssaoPass.maxDistance = v);
-        ssaoFolder.add(ssaoParams, 'intensity', 0, 100, 1).onChange(v => ssaoPass.intensity = v);
-
-        // Shadow catcher GUI
-        const shadowCatcherParams = {
-            offset: 0.017
-        };
-        let shadowCatcherPlane = null;
-        let modelMinY = 0;
-        const shadowCatcherFolder = gui.addFolder('Shadow Catcher');
-        shadowCatcherFolder.add(shadowCatcherParams, 'offset', -1, 1, 0.001).onChange(v => {
-            if (shadowCatcherPlane) shadowCatcherPlane.position.y = modelMinY + v;
-        });
-
         // Model loading
         const glbUrl = './scene-optimized.glb'; // Assuming the GLB file is in the same directory as index.html on your Netlify site
         const loader = new GLTFLoader();
@@ -319,16 +282,16 @@
 
                 // Create shadow catcher plane
                 const box = new THREE.Box3().setFromObject(gltf.scene);
-                modelMinY = box.min.y;
+                const minY = box.min.y;
                 const planeSize = Math.max(box.max.x - box.min.x, box.max.z - box.min.z) * 2;
                 const planeGeo = new THREE.PlaneGeometry(planeSize, planeSize);
                 const planeMat = new THREE.ShadowMaterial({ opacity: 0.5 });
-                shadowCatcherPlane = new THREE.Mesh(planeGeo, planeMat);
-                shadowCatcherPlane.rotation.x = -Math.PI / 2;
-                shadowCatcherPlane.position.y = modelMinY + shadowCatcherParams.offset;
-                shadowCatcherPlane.receiveShadow = true;
-                shadowCatcherPlane.castShadow = false;
-                scene.add(shadowCatcherPlane);
+                const plane = new THREE.Mesh(planeGeo, planeMat);
+                plane.rotation.x = -Math.PI / 2;
+                plane.position.y = minY - 0.017;
+                plane.receiveShadow = true;
+                plane.castShadow = false;
+                scene.add(plane);
 
                 // Center the model
                 const center = box.getCenter(new THREE.Vector3());
@@ -436,12 +399,7 @@
                     ...(slot.params.type === 'HemisphereLight' ? {
                         groundColor: slot.params.groundColor
                     } : {})
-                })),
-                postProcessing: {
-                    bloom: bloomParams,
-                    ssao: ssaoParams
-                },
-                shadowCatcher: shadowCatcherParams
+                }))
             };
             console.log(JSON.stringify(settings, null, 2));
         });
