--- a/Index.html
+++ b/Index.html
@@ -71,12 +71,12 @@
         camera.position.set(-0.2840329107436267, 1.4382243402279846, 10.275912849022538);
         camera.rotation.set(0.00101810946737628, -0.021709860116203898, 0.00002210128553521455);
 
-        const renderer = new THREE.WebGLRenderer({ antialias: true });
+        const renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true });
         renderer.setSize(container.clientWidth, container.clientHeight);
         renderer.setPixelRatio(window.devicePixelRatio);
         renderer.shadowMap.enabled = true;
         renderer.shadowMap.type = THREE.PCFSoftShadowMap;
-        renderer.setClearColor('#f0f0f0', 1);
+        renderer.setClearColor(0x000000, 0);
         container.appendChild(renderer.domElement);
 
         const composer = new EffectComposer(renderer);
@@ -90,6 +90,20 @@
             threshold: 1
         };
         const bloomPass = new UnrealBloomPass(new THREE.Vector2(container.clientWidth, container.clientHeight), bloomParams.strength, bloomParams.radius, bloomParams.threshold);
+        // Modify composite shader for transparency
+        bloomPass.compositeMaterial.fragmentShader = `
+            varying vec2 vUv;
+            uniform sampler2D baseTexture;
+            uniform sampler2D bloomTexture;
+            uniform float bloomFactor;
+            void main() {
+                vec4 base = texture2D( baseTexture, vUv );
+                vec4 bloom = texture2D( bloomTexture, vUv );
+                gl_FragColor.rgb = base.rgb + bloomFactor * bloom.rgb;
+                gl_FragColor.a = base.a;
+            }
+        `;
+        bloomPass.compositeMaterial.needsUpdate = true;
         composer.addPass(bloomPass);
 
         const controls = new OrbitControls(camera, renderer.domElement);
@@ -254,6 +268,15 @@
         bloomFolder.add(bloomParams, 'radius', 0, 1, 0.01).onChange(v => bloomPass.radius = v);
         bloomFolder.add(bloomParams, 'threshold', 0, 1, 0.01).onChange(v => bloomPass.threshold = v);
 
+        // Shadow catcher params
+        const shadowCatcherParams = {
+            height: 0
+        };
+        const shadowCatcherFolder = gui.addFolder('Shadow Catcher');
+        shadowCatcherFolder.add(shadowCatcherParams, 'height', -1, 1, 0.001).onChange(v => {
+            if (shadowCatcherPlane) shadowCatcherPlane.position.y = v;
+        });
+
         // Model loading
         const glbUrl = './scene-optimized.glb'; // Assuming the GLB file is in the same directory as index.html on your Netlify site
         const loader = new GLTFLoader();
@@ -261,6 +284,7 @@
         let primaryColorObjects = [];
         let secondaryColorObjects = [];
         let decalObjects = [];
+        let shadowCatcherPlane = null;
         loader.load(
             glbUrl,
             (gltf) => {
@@ -286,12 +310,12 @@
                 const planeSize = Math.max(box.max.x - box.min.x, box.max.z - box.min.z) * 2;
                 const planeGeo = new THREE.PlaneGeometry(planeSize, planeSize);
                 const planeMat = new THREE.ShadowMaterial({ opacity: 0.5 });
-                const plane = new THREE.Mesh(planeGeo, planeMat);
-                plane.rotation.x = -Math.PI / 2;
-                plane.position.y = minY - 0.017;
-                plane.receiveShadow = true;
-                plane.castShadow = false;
-                scene.add(plane);
+                shadowCatcherPlane = new THREE.Mesh(planeGeo, planeMat);
+                shadowCatcherPlane.rotation.x = -Math.PI / 2;
+                shadowCatcherPlane.position.y = shadowCatcherParams.height;
+                shadowCatcherPlane.receiveShadow = true;
+                shadowCatcherPlane.castShadow = false;
+                scene.add(shadowCatcherPlane);
 
                 // Center the model
                 const center = box.getCenter(new THREE.Vector3());
@@ -399,7 +423,10 @@
                     ...(slot.params.type === 'HemisphereLight' ? {
                         groundColor: slot.params.groundColor
                     } : {})
-                }))
+                })),
+                shadowCatcher: {
+                    height: shadowCatcherParams.height
+                }
             };
             console.log(JSON.stringify(settings, null, 2));
         });
